--- a/2022-21/style.css
+++ b/2022-21/style.css
@@ -1,31 +1,29 @@
 /* Presets */
 body {
   height: 100vh;
-  width: 100vh;
+  width: 100vw;
   margin: 0 auto;
   position: relative;
-  background-color: #233637;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  background: radial-gradient(#4b7375, black);
 }
 
 div:before, div:after {
   display: block;
-  content: '';
+  content: "";
   position: absolute;
 }
 
 div.valuable {
-  width: 100%;
-  height: 100%;
-  margin-left: -15vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  width: 100vmin;
+  height: 100vmin;
+  margin-left: -30vmin;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: linear-gradient(-135deg, #26c893 10vh, transparent 10vh) 30vh 40vh/20vh 20vh no-repeat, linear-gradient(-45deg, #55ddb9 10vh, transparent 10vh) 30vh 20vh/20vh 20vh no-repeat, linear-gradient(-45deg, #20bc7d 10vh, transparent 10vh) 44vh 20vh/20vh 20vh no-repeat, linear-gradient(135deg, #26c893 10vh, transparent 10vh) 50vh 26vh/20vh 20vh no-repeat, linear-gradient(45deg, #1fb67c 10vh, transparent 10vh) 64vh 20vh/20vh 20vh no-repeat, linear-gradient(-135deg, #55ddb9 10vh, transparent 10vh) 58vh 26vh/20vh 20vh no-repeat, linear-gradient(45deg, #1fb67c 10vh, transparent 10vh) 50vh 34vh/20vh 20vh no-repeat, linear-gradient(-135deg, #55ddb9 10vh, transparent 10vh) 44vh 40vh/20vh 20vh no-repeat, linear-gradient(-45deg, #20bc7d 10vh, transparent 10vh) 58vh 34vh/20vh 20vh no-repeat, linear-gradient(135deg, #26c893 10vh, transparent 10vh) 64vh 40vh/20vh 20vh no-repeat, linear-gradient(135deg, #55ddb9 10vh, transparent 10vh) 78vh 40vh/20vh 20vh no-repeat, linear-gradient(45deg, #26c893 10vh, transparent 10vh) 78vh 20vh/20vh 20vh no-repeat, linear-gradient(-135deg, #55ddb9 10vh, transparent 10vh) 44vh 54vh/20vh 20vh no-repeat, linear-gradient(135deg, #26c893 10vh, transparent 10vh) 64vh 54vh/20vh 20vh no-repeat;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(-135deg, #26c893 10vmin, transparent 10vmin) 30vmin 40vmin/20vmin 20vmin no-repeat, linear-gradient(-45deg, #55ddb9 10vmin, transparent 10vmin) 30vmin 20vmin/20vmin 20vmin no-repeat, linear-gradient(-45deg, #20bc7d 10vmin, transparent 10vmin) 44vmin 20vmin/20vmin 20vmin no-repeat, linear-gradient(135deg, #26c893 10vmin, transparent 10vmin) 50vmin 26vmin/20vmin 20vmin no-repeat, linear-gradient(45deg, #1fb67c 10vmin, transparent 10vmin) 64vmin 20vmin/20vmin 20vmin no-repeat, linear-gradient(-135deg, #55ddb9 10vmin, transparent 10vmin) 58vmin 26vmin/20vmin 20vmin no-repeat, linear-gradient(45deg, #1fb67c 10vmin, transparent 10vmin) 50vmin 34vmin/20vmin 20vmin no-repeat, linear-gradient(-135deg, #55ddb9 10vmin, transparent 10vmin) 44vmin 40vmin/20vmin 20vmin no-repeat, linear-gradient(-45deg, #20bc7d 10vmin, transparent 10vmin) 58vmin 34vmin/20vmin 20vmin no-repeat, linear-gradient(135deg, #26c893 10vmin, transparent 10vmin) 64vmin 40vmin/20vmin 20vmin no-repeat, linear-gradient(135deg, #55ddb9 10vmin, transparent 10vmin) 78vmin 40vmin/20vmin 20vmin no-repeat, linear-gradient(45deg, #26c893 10vmin, transparent 10vmin) 78vmin 20vmin/20vmin 20vmin no-repeat, linear-gradient(-135deg, #55ddb9 10vmin, transparent 10vmin) 44vmin 54vmin/20vmin 20vmin no-repeat, linear-gradient(135deg, #26c893 10vmin, transparent 10vmin) 64vmin 54vmin/20vmin 20vmin no-repeat;
 }
-/*# sourceMappingURL=style.css.map */
