--- a/2022-devilledegg/style.css
+++ b/2022-devilledegg/style.css
@@ -53,4 +53,4 @@ div:after {
   border-radius: 1vmin 1vmin 3vmin 3vmin;
   border: 0.5vmin solid #010008;
   background: radial-gradient(at 50% 100%, #f5750f 1vmin, #010008 1vmin);
-}/*# sourceMappingURL=style.css.map */
+}
