--- a/2022-09/style.scss
+++ b/2022-09/style.scss
@@ -30,7 +30,7 @@ div:before, div:after {
 }
 
 div.rise {
-    width: 100vh;
+    width: 100vw;
     height: 100vh;
     display: flex;
     position: relative;
