--- a/2022-14/style.css
+++ b/2022-14/style.css
@@ -3,75 +3,60 @@
 *, *:before, *:after {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
+  width: 100vw;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   z-index: 1;
-  -webkit-perspective-origin: 25% 75%;
-          perspective-origin: 25% 75%;
+  perspective-origin: 25% 75%;
   background: linear-gradient(187.47deg, #99C0CD 15%, #5993A7 100%);
-  -webkit-perspective-origin: 50% 50%;
-          perspective-origin: 50% 50%;
+  perspective-origin: 50% 50%;
 }
 
 div:before, div:after {
   display: block;
-  content: '';
+  content: "";
   position: absolute;
 }
 
 div.splash {
-  width: 100vh;
-  height: 100vh;
+  width: 100vmin;
+  height: 100vmin;
+  left: -4vmin;
   margin: 0 auto;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(1.5vh, #0d0d0d), color-stop(1.75vh, #0d0d0d), color-stop(10vh, transparent)) 32vh 52vh/45vh 6vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0.25vh, #cccccc), color-stop(0.5vh, #4d4d4d), color-stop(4.75vh, #4d4d4d), color-stop(4.75vh, #272727), color-stop(10vh, transparent)) 12.5vh 53.5vh/10vh 4vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(1.5vh, #0d0d0d), color-stop(1.75vh, #0d0d0d), color-stop(10vh, transparent)) 12vh 53vh/11vh 5vh no-repeat, radial-gradient(circle, #404040 0vh, #404040 3.25vh, transparent 3.2vh) 83.5vh 51.25vh/8vh 8vh no-repeat, radial-gradient(circle, #e6e6e6 0vh, #e6e6e6 3vh, transparent 3vh) 83.5vh 50.5vh/8vh 8vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1.2vh, #333333 3.5vh, #272727 3.5vh, #0d0d0d 4vh, transparent 4vh) 83.5vh 51vh/8vh 8vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1vh, transparent 1vh) 24.25vh 54.45vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #e6e6e6 0vh, #e6e6e6 1vh, transparent 1vh) 24.25vh 54.25vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #333333 0vh, #333333 1.2vh, #272727 1.2vh, #0d0d0d 1.5vh, transparent 1.5vh) 24vh 54vh/3vh 3vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1vh, transparent 1vh) 13.25vh 64.5vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #e6e6e6 0vh, #e6e6e6 1vh, transparent 1vh) 13.25vh 64.25vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1.2vh, #272727 1.2vh, #0d0d0d 1.5vh, transparent 1.5vh) 13vh 64vh/3vh 3vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1vh, transparent 1vh) 18.25vh 64.5vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #e6e6e6 0vh, #e6e6e6 1vh, transparent 1vh) 18.25vh 64.25vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1.2vh, #272727 1.2vh, #0d0d0d 1.5vh, transparent 1.5vh) 18vh 64vh/3vh 3vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1vh, transparent 1vh) 23.25vh 64.5vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #e6e6e6 0vh, #e6e6e6 1vh, transparent 1vh) 23.25vh 64.25vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1.2vh, #272727 1.2vh, #0d0d0d 1.5vh, transparent 1.5vh) 23vh 64vh/3vh 3vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1vh, transparent 1vh) 72.25vh 64.5vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #e6e6e6 0vh, #e6e6e6 1vh, transparent 1vh) 72.25vh 64.25vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1.2vh, #272727 1.2vh, #0d0d0d 1.5vh, transparent 1.5vh) 72vh 64vh/3vh 3vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0.25vh, #cccccc), color-stop(0.5vh, #6a9eb0), color-stop(4.75vh, #6a9eb0), color-stop(4.75vh, #477686), color-stop(10vh, transparent)) 30.5vh 63.5vh/25vh 4vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(1.5vh, #0d0d0d), color-stop(1.75vh, #0d0d0d), color-stop(10vh, transparent)) 30vh 63vh/26vh 5vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0.25vh, #cccccc), color-stop(0.5vh, #4d4d4d), color-stop(4.75vh, #4d4d4d), color-stop(4.75vh, #272727), color-stop(10vh, transparent)) 60.5vh 63.5vh/10vh 4vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(1.5vh, #0d0d0d), color-stop(1.75vh, #0d0d0d), color-stop(10vh, transparent)) 60vh 63vh/11vh 5vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(1.5vh, #0d0d0d), color-stop(1.75vh, #0d0d0d), color-stop(10vh, transparent)) 87vh 63vh/0.5vh 5vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0.25vh, #cccccc), color-stop(0.5vh, #4d4d4d), color-stop(4.75vh, #4d4d4d), color-stop(4.75vh, #272727), color-stop(10vh, transparent)) 80.5vh 63.5vh/14vh 4vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(1.5vh, #0d0d0d), color-stop(1.75vh, #0d0d0d), color-stop(10vh, transparent)) 80vh 63vh/15vh 5vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(1.5vh, #1a1a1a), color-stop(1.75vh, #0d0d0d), color-stop(6vh, transparent)) 10vh 60vh/90vh 2vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(30vh, #333333), color-stop(30vh, #404040), color-stop(3vh, transparent)) 10vh 50vh/90vh 20vh no-repeat, radial-gradient(ellipse, #1a1a1a 7.5vh, black 8vh, transparent 8vh) 25vh 69vh/15vh 2vh no-repeat, radial-gradient(ellipse, #1a1a1a 7.5vh, black 8vh, transparent 8vh) 75vh 69vh/15vh 2vh no-repeat;
-  background: linear-gradient(#0d0d0d 1.5vh, #0d0d0d 1.75vh, transparent 10vh) 32vh 52vh/45vh 6vh no-repeat, linear-gradient(#cccccc 0.25vh, #4d4d4d 0.5vh, #4d4d4d 4.75vh, #272727 4.75vh, transparent 10vh) 12.5vh 53.5vh/10vh 4vh no-repeat, linear-gradient(#0d0d0d 1.5vh, #0d0d0d 1.75vh, transparent 10vh) 12vh 53vh/11vh 5vh no-repeat, radial-gradient(circle, #404040 0vh, #404040 3.25vh, transparent 3.2vh) 83.5vh 51.25vh/8vh 8vh no-repeat, radial-gradient(circle, #e6e6e6 0vh, #e6e6e6 3vh, transparent 3vh) 83.5vh 50.5vh/8vh 8vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1.2vh, #333333 3.5vh, #272727 3.5vh, #0d0d0d 4vh, transparent 4vh) 83.5vh 51vh/8vh 8vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1vh, transparent 1vh) 24.25vh 54.45vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #e6e6e6 0vh, #e6e6e6 1vh, transparent 1vh) 24.25vh 54.25vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #333333 0vh, #333333 1.2vh, #272727 1.2vh, #0d0d0d 1.5vh, transparent 1.5vh) 24vh 54vh/3vh 3vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1vh, transparent 1vh) 13.25vh 64.5vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #e6e6e6 0vh, #e6e6e6 1vh, transparent 1vh) 13.25vh 64.25vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1.2vh, #272727 1.2vh, #0d0d0d 1.5vh, transparent 1.5vh) 13vh 64vh/3vh 3vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1vh, transparent 1vh) 18.25vh 64.5vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #e6e6e6 0vh, #e6e6e6 1vh, transparent 1vh) 18.25vh 64.25vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1.2vh, #272727 1.2vh, #0d0d0d 1.5vh, transparent 1.5vh) 18vh 64vh/3vh 3vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1vh, transparent 1vh) 23.25vh 64.5vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #e6e6e6 0vh, #e6e6e6 1vh, transparent 1vh) 23.25vh 64.25vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1.2vh, #272727 1.2vh, #0d0d0d 1.5vh, transparent 1.5vh) 23vh 64vh/3vh 3vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1vh, transparent 1vh) 72.25vh 64.5vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #e6e6e6 0vh, #e6e6e6 1vh, transparent 1vh) 72.25vh 64.25vh/2.5vh 2.5vh no-repeat, radial-gradient(circle, #4d4d4d 0vh, #4d4d4d 1.2vh, #272727 1.2vh, #0d0d0d 1.5vh, transparent 1.5vh) 72vh 64vh/3vh 3vh no-repeat, linear-gradient(#cccccc 0.25vh, #6a9eb0 0.5vh, #6a9eb0 4.75vh, #477686 4.75vh, transparent 10vh) 30.5vh 63.5vh/25vh 4vh no-repeat, linear-gradient(#0d0d0d 1.5vh, #0d0d0d 1.75vh, transparent 10vh) 30vh 63vh/26vh 5vh no-repeat, linear-gradient(#cccccc 0.25vh, #4d4d4d 0.5vh, #4d4d4d 4.75vh, #272727 4.75vh, transparent 10vh) 60.5vh 63.5vh/10vh 4vh no-repeat, linear-gradient(#0d0d0d 1.5vh, #0d0d0d 1.75vh, transparent 10vh) 60vh 63vh/11vh 5vh no-repeat, linear-gradient(#0d0d0d 1.5vh, #0d0d0d 1.75vh, transparent 10vh) 87vh 63vh/0.5vh 5vh no-repeat, linear-gradient(#cccccc 0.25vh, #4d4d4d 0.5vh, #4d4d4d 4.75vh, #272727 4.75vh, transparent 10vh) 80.5vh 63.5vh/14vh 4vh no-repeat, linear-gradient(#0d0d0d 1.5vh, #0d0d0d 1.75vh, transparent 10vh) 80vh 63vh/15vh 5vh no-repeat, linear-gradient(#1a1a1a 1.5vh, #0d0d0d 1.75vh, transparent 6vh) 10vh 60vh/90vh 2vh no-repeat, linear-gradient(#333333 30vh, #404040 30vh, transparent 3vh) 10vh 50vh/90vh 20vh no-repeat, radial-gradient(ellipse, #1a1a1a 7.5vh, black 8vh, transparent 8vh) 25vh 69vh/15vh 2vh no-repeat, radial-gradient(ellipse, #1a1a1a 7.5vh, black 8vh, transparent 8vh) 75vh 69vh/15vh 2vh no-repeat;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(#0d0d0d 1.5vmin, #0d0d0d 1.75vmin, transparent 10vmin) 32vmin 52vmin/45vmin 6vmin no-repeat, linear-gradient(#cccccc 0.25vmin, #4d4d4d 0.5vmin, #4d4d4d 4.75vmin, #272727 4.75vmin, transparent 10vmin) 12.5vmin 53.5vmin/10vmin 4vmin no-repeat, linear-gradient(#0d0d0d 1.5vmin, #0d0d0d 1.75vmin, transparent 10vmin) 12vmin 53vmin/11vmin 5vmin no-repeat, radial-gradient(circle, #404040 0vmin, #404040 3.25vmin, transparent 3.2vmin) 83.5vmin 51.25vmin/8vmin 8vmin no-repeat, radial-gradient(circle, #e6e6e6 0vmin, #e6e6e6 3vmin, transparent 3vmin) 83.5vmin 50.5vmin/8vmin 8vmin no-repeat, radial-gradient(circle, #4d4d4d 0vmin, #4d4d4d 1.2vmin, #333333 3.5vmin, #272727 3.5vmin, #0d0d0d 4vmin, transparent 4vmin) 83.5vmin 51vmin/8vmin 8vmin no-repeat, radial-gradient(circle, #4d4d4d 0vmin, #4d4d4d 1vmin, transparent 1vmin) 24.25vmin 54.45vmin/2.5vmin 2.5vmin no-repeat, radial-gradient(circle, #e6e6e6 0vmin, #e6e6e6 1vmin, transparent 1vmin) 24.25vmin 54.25vmin/2.5vmin 2.5vmin no-repeat, radial-gradient(circle, #333333 0vmin, #333333 1.2vmin, #272727 1.2vmin, #0d0d0d 1.5vmin, transparent 1.5vmin) 24vmin 54vmin/3vmin 3vmin no-repeat, radial-gradient(circle, #4d4d4d 0vmin, #4d4d4d 1vmin, transparent 1vmin) 13.25vmin 64.5vmin/2.5vmin 2.5vmin no-repeat, radial-gradient(circle, #e6e6e6 0vmin, #e6e6e6 1vmin, transparent 1vmin) 13.25vmin 64.25vmin/2.5vmin 2.5vmin no-repeat, radial-gradient(circle, #4d4d4d 0vmin, #4d4d4d 1.2vmin, #272727 1.2vmin, #0d0d0d 1.5vmin, transparent 1.5vmin) 13vmin 64vmin/3vmin 3vmin no-repeat, radial-gradient(circle, #4d4d4d 0vmin, #4d4d4d 1vmin, transparent 1vmin) 18.25vmin 64.5vmin/2.5vmin 2.5vmin no-repeat, radial-gradient(circle, #e6e6e6 0vmin, #e6e6e6 1vmin, transparent 1vmin) 18.25vmin 64.25vmin/2.5vmin 2.5vmin no-repeat, radial-gradient(circle, #4d4d4d 0vmin, #4d4d4d 1.2vmin, #272727 1.2vmin, #0d0d0d 1.5vmin, transparent 1.5vmin) 18vmin 64vmin/3vmin 3vmin no-repeat, radial-gradient(circle, #4d4d4d 0vmin, #4d4d4d 1vmin, transparent 1vmin) 23.25vmin 64.5vmin/2.5vmin 2.5vmin no-repeat, radial-gradient(circle, #e6e6e6 0vmin, #e6e6e6 1vmin, transparent 1vmin) 23.25vmin 64.25vmin/2.5vmin 2.5vmin no-repeat, radial-gradient(circle, #4d4d4d 0vmin, #4d4d4d 1.2vmin, #272727 1.2vmin, #0d0d0d 1.5vmin, transparent 1.5vmin) 23vmin 64vmin/3vmin 3vmin no-repeat, radial-gradient(circle, #4d4d4d 0vmin, #4d4d4d 1vmin, transparent 1vmin) 72.25vmin 64.5vmin/2.5vmin 2.5vmin no-repeat, radial-gradient(circle, #e6e6e6 0vmin, #e6e6e6 1vmin, transparent 1vmin) 72.25vmin 64.25vmin/2.5vmin 2.5vmin no-repeat, radial-gradient(circle, #4d4d4d 0vmin, #4d4d4d 1.2vmin, #272727 1.2vmin, #0d0d0d 1.5vmin, transparent 1.5vmin) 72vmin 64vmin/3vmin 3vmin no-repeat, linear-gradient(#cccccc 0.25vmin, #6a9eb0 0.5vmin, #6a9eb0 4.75vmin, #477686 4.75vmin, transparent 10vmin) 30.5vmin 63.5vmin/25vmin 4vmin no-repeat, linear-gradient(#0d0d0d 1.5vmin, #0d0d0d 1.75vmin, transparent 10vmin) 30vmin 63vmin/26vmin 5vmin no-repeat, linear-gradient(#cccccc 0.25vmin, #4d4d4d 0.5vmin, #4d4d4d 4.75vmin, #272727 4.75vmin, transparent 10vmin) 60.5vmin 63.5vmin/10vmin 4vmin no-repeat, linear-gradient(#0d0d0d 1.5vmin, #0d0d0d 1.75vmin, transparent 10vmin) 60vmin 63vmin/11vmin 5vmin no-repeat, linear-gradient(#0d0d0d 1.5vmin, #0d0d0d 1.75vmin, transparent 10vmin) 87vmin 63vmin/0.5vmin 5vmin no-repeat, linear-gradient(#cccccc 0.25vmin, #4d4d4d 0.5vmin, #4d4d4d 4.75vmin, #272727 4.75vmin, transparent 10vmin) 80.5vmin 63.5vmin/14vmin 4vmin no-repeat, linear-gradient(#0d0d0d 1.5vmin, #0d0d0d 1.75vmin, transparent 10vmin) 80vmin 63vmin/15vmin 5vmin no-repeat, linear-gradient(#1a1a1a 1.5vmin, #0d0d0d 1.75vmin, transparent 6vmin) 10vmin 60vmin/90vmin 2vmin no-repeat, linear-gradient(#333333 30vmin, #404040 30vmin, transparent 3vmin) 10vmin 50vmin/90vmin 20vmin no-repeat, radial-gradient(ellipse, #1a1a1a 7.5vmin, black 8vmin, transparent 8vmin) 25vmin 69vmin/15vmin 2vmin no-repeat, radial-gradient(ellipse, #1a1a1a 7.5vmin, black 8vmin, transparent 8vmin) 75vmin 69vmin/15vmin 2vmin no-repeat;
 }
 
 div.splash:before {
-  width: 100vh;
-  height: 100vh;
+  width: 100vmin;
+  height: 100vmin;
   margin: 0 auto;
   z-index: 99;
-  -webkit-transform: perspective(1000px) rotateX(55deg);
-          transform: perspective(1000px) rotateX(55deg);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #a6a6a6), color-stop(0.5vh, #929292)) 42vh 54.5vh/26vh 0.25vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #a6a6a6), color-stop(0.5vh, #929292)) 42vh 55.5vh/26vh 0.25vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #a6a6a6), color-stop(0.5vh, #929292)) 42vh 56.5vh/26vh 0.25vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #a6a6a6), color-stop(6vh, #bfbfbf), color-stop(10vh, transparent)) 41vh 54vh/28vh 4vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0vh, black), color-stop(4vh, black), color-stop(6vh, transparent)) 33.5vh 54vh/42.25vh 4.75vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(20vh, #404040), color-stop(30vh, #272727), color-stop(3vh, transparent)) 10vh 20vh/90vh 50vh no-repeat;
-  background: linear-gradient(#a6a6a6 0vh, #929292 0.5vh) 42vh 54.5vh/26vh 0.25vh no-repeat, linear-gradient(#a6a6a6 0vh, #929292 0.5vh) 42vh 55.5vh/26vh 0.25vh no-repeat, linear-gradient(#a6a6a6 0vh, #929292 0.5vh) 42vh 56.5vh/26vh 0.25vh no-repeat, linear-gradient(#a6a6a6 0vh, #bfbfbf 6vh, transparent 10vh) 41vh 54vh/28vh 4vh no-repeat, linear-gradient(black 0vh, black 4vh, transparent 6vh) 33.5vh 54vh/42.25vh 4.75vh no-repeat, linear-gradient(#404040 20vh, #272727 30vh, transparent 3vh) 10vh 20vh/90vh 50vh no-repeat;
+  transform: perspective(1000px) rotateX(55deg);
+  background: linear-gradient(#a6a6a6 0vmin, #929292 0.5vmin) 42vmin 54.5vmin/26vmin 0.25vmin no-repeat, linear-gradient(#a6a6a6 0vmin, #929292 0.5vmin) 42vmin 55.5vmin/26vmin 0.25vmin no-repeat, linear-gradient(#a6a6a6 0vmin, #929292 0.5vmin) 42vmin 56.5vmin/26vmin 0.25vmin no-repeat, linear-gradient(#a6a6a6 0vmin, #bfbfbf 6vmin, transparent 10vmin) 41vmin 54vmin/28vmin 4vmin no-repeat, linear-gradient(black 0vmin, black 4vmin, transparent 6vmin) 33.5vmin 54vmin/42.25vmin 4.75vmin no-repeat, linear-gradient(#404040 20vmin, #272727 30vmin, transparent 3vmin) 10vmin 20vmin/90vmin 50vmin no-repeat;
 }
 
 div.splash:after {
-  width: 100vh;
-  height: 100vh;
+  width: 100vmin;
+  height: 100vmin;
   z-index: 999;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  content: 'Splash';
-  font-family: 'Special Elite', cursive;
-  font-size: 3vh;
-  padding-top: 19vh;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #929292), color-stop(0.5vh, #929292)) 69vh 57.75vh/1.25vh 2.75vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #a6a6a6), color-stop(0.5vh, #929292)) 35vh 58vh/33vh 0.25vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #a6a6a6), color-stop(0.5vh, #929292)) 35vh 59vh/33vh 0.25vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #a6a6a6), color-stop(0.5vh, #929292)) 35vh 60vh/33vh 0.25vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #a6a6a6), color-stop(6vh, #bfbfbf), color-stop(10vh, transparent)) 33.75vh 57vh/38vh 4vh no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0vh, black), color-stop(6vh, black), color-stop(14vh, transparent)) 32.25vh 55.5vh/46vh 7vh no-repeat;
-  background: linear-gradient(#929292 0vh, #929292 0.5vh) 69vh 57.75vh/1.25vh 2.75vh no-repeat, linear-gradient(#a6a6a6 0vh, #929292 0.5vh) 35vh 58vh/33vh 0.25vh no-repeat, linear-gradient(#a6a6a6 0vh, #929292 0.5vh) 35vh 59vh/33vh 0.25vh no-repeat, linear-gradient(#a6a6a6 0vh, #929292 0.5vh) 35vh 60vh/33vh 0.25vh no-repeat, linear-gradient(#a6a6a6 0vh, #bfbfbf 6vh, transparent 10vh) 33.75vh 57vh/38vh 4vh no-repeat, linear-gradient(black 0vh, black 6vh, transparent 14vh) 32.25vh 55.5vh/46vh 7vh no-repeat;
+  content: "Splash";
+  font-family: "Special Elite", cursive;
+  font-size: 3vmin;
+  padding-top: 19vmin;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(#929292 0vmin, #929292 0.5vmin) 69vmin 57.75vmin/1.25vmin 2.75vmin no-repeat, linear-gradient(#a6a6a6 0vmin, #929292 0.5vmin) 35vmin 58vmin/33vmin 0.25vmin no-repeat, linear-gradient(#a6a6a6 0vmin, #929292 0.5vmin) 35vmin 59vmin/33vmin 0.25vmin no-repeat, linear-gradient(#a6a6a6 0vmin, #929292 0.5vmin) 35vmin 60vmin/33vmin 0.25vmin no-repeat, linear-gradient(#a6a6a6 0vmin, #bfbfbf 6vmin, transparent 10vmin) 33.75vmin 57vmin/38vmin 4vmin no-repeat, linear-gradient(black 0vmin, black 6vmin, transparent 14vmin) 32.25vmin 55.5vmin/46vmin 7vmin no-repeat;
 }
-/*# sourceMappingURL=style.css.map */
